have changed grid div squares to buttons so they can more easily be disabled once they've been clicked. Realised this made the spacebar trigger functions involuntarily, so reassigned the R key as the button that dictates the orientation of the player's boats. Still need to figure out how to stop all player squares that light up at boat positioning from being able to overlap.

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 body {
   margin: 0;
   height: 100vh;
-  /* background-image: url('pexels-lisha-riabinina-37487.jpg'); */
+  background-image: url('pexels-lisha-riabinina-37487.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -183,6 +183,7 @@ h3 {
   width: 10%;
   height: 10%;
   border: solid 1px springgreen;
+  background: transparent;
   flex-grow: 1;
 }
 
